[ADD] Requirements file [ADD] Similar post using tags [ADD] Use Count Aggregation

--- a/blog/posts/templates/blog/post/detail.html
+++ b/blog/posts/templates/blog/post/detail.html
@@ -28,6 +28,15 @@
         {% empty %}
         <p>There are no comments yet.</p>
     {% endfor %}
+    <h2>Similar posts</h2>
+    {% for post in similar_post %}
+        <p>
+            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+        </p>
+        {% empty %}
+        There aren't similar posts yet.
+    {% endfor %}
+
     {% if new_comment %}
         <h2>Your comment has been added.</h2>
     {% else %}
