--- a/blog/posts/templates/blog/base.html
+++ b/blog/posts/templates/blog/base.html
@@ -1,18 +1,21 @@
+{% load blog_tags %}
 {% load static %}
 <!DOCTYPE html>
 <html>
 <head>
-  <title>{% block title %}{% endblock %}</title>
-  <link href="{% static "css/blog.css" %}" rel="stylesheet">
+    <title>{% block title %}{% endblock %}</title>
+    <link href="{% static "css/blog.css" %}" rel="stylesheet">
 </head>
 <body>
-  <div id="content">
+<div id="content">
     {% block content %}
     {% endblock %}
-  </div>
-  <div id="sidebar">
+</div>
+<div id="sidebar">
     <h2>My blog</h2>
-    <p>This is my blog.</p>
-  </div>
+    <p>This is my blog. I've written {% get_total_posts %} posts so far.</p>
+    <h3>Latest posts</h3>
+    {% get_last_post 3 %}
+</div>
 </body>
 </html>
